feat: 홈 화면 구현
1. 네비게이션 제거
- App.js
2. 로그인 이벤트 메서드 로직 수정
- SignIn.js, SignIn.css
3. 네비게이션 컴포넌트 수정
- Navigation.js, Navigation.css
4. 사이드바 컴포넌트 구현
- SideBar.js, SideBar.css
5. 홈 화면 컴포넌트 수정
- Main.js

--- a/src/css/Navigation.css
+++ b/src/css/Navigation.css
@@ -29,6 +29,14 @@
 .nav-box-small-link a {
     color: white;
     text-decoration-line: none;
+    font-size: 17px;
+}
+
+.nav-box-small-link button {
+    color: white;
+    background: none;
+    border: none;
+    font-size: 17px;
 }
 
 .nav-box-small-circle {
