--- a/src/css/SignIn.css
+++ b/src/css/SignIn.css
@@ -7,7 +7,7 @@
     justify-content: center;
 }
 
-.box-form {
+.signin-box-form {
     border-radius: 20px;
     background: rgba(0, 0, 0, 0.5);
     width: 400px;
@@ -17,7 +17,7 @@
     justify-content: center;
 }
 
-.box-depth-1 {
+.signin-box-depth-1 {
     width: 100%;
     height: 80%;
     display: flex;
@@ -26,7 +26,7 @@
     flex-direction: column;
 }
 
-.box-depth-2-top {
+.signin-box-depth-2-top {
     width: 100%;
     height: 28%;
     display: flex;
@@ -35,7 +35,7 @@
     flex-direction: column;
 }
 
-.box-depth-2-bottom {
+.signin-box-depth-2-bottom {
     width: 100%;
     height: 40%;
     display: flex;
@@ -44,7 +44,7 @@
     flex-direction: column;
 }
 
-.box-depth-3-input {
+.signin-box-depth-3-input {
     width: 100%;
     height: 40%;
     display: flex;
@@ -52,7 +52,7 @@
     justify-content: center;
 }
 
-.box-depth-3-button {
+.signin-box-depth-3-button {
     width: 100%;
     height: 28%;
     display: flex;
@@ -60,7 +60,7 @@
     justify-content: center;
 }
 
-.box-depth-3-input input {
+.signin-box-depth-3-input input {
     width: 82%;
     height: 100%;
     border: none;
@@ -71,7 +71,7 @@
     padding-left: 10px;
 }
 
-.box-depth-3-button #btn-signin {
+.signin-box-depth-3-button #btn-signin {
     width: 85%;
     height: 100%;
     border: none;
@@ -83,7 +83,7 @@
     box-shadow: #303030 0px 4px 5px;
 }
 
-.box-depth-3-button #btn-home {
+.signin-box-depth-3-button #btn-home {
     width: 85%;
     height: 100%;
     border: none;
@@ -95,7 +95,7 @@
     box-shadow: #303030 0px 4px 5px;
 }
 
-.box-depth-4 {
+.signin-box-depth-4 {
     width: 85%;
     height: 100%;
     display: flex;
@@ -103,7 +103,7 @@
     justify-content: space-between;
 }
 
-.box-depth-4 a {
+.signin-box-depth-4 a {
     color: white;
     text-decoration-line: none;
 }
