--- a/src/css/Join.css
+++ b/src/css/Join.css
@@ -113,3 +113,47 @@
 .join-box-depth-4-btn:hover {
     cursor: pointer;
 }
+
+.join-complete-box-form {
+    width: 400px;
+    height: 400px;
+    background: white;
+    border-radius: 20px;
+    align-self: center;
+    display: flex;
+    justify-content: center;
+}
+.join-complete-box-depth-1 {
+    width: 80%;
+    height: 80%;
+    align-self: end;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.join-complete-box-depth-2-top {
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.join-complete-box-depth-2-bottom {
+    height: 15%;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+    padding-bottom: 20px;
+}
+.join-complete-box-depth-3-icon {
+    height: 50%;
+    font-size: 100px;
+    text-align: center;
+    color: #029E66;
+}
+.join-complete-box-depth-3-home {
+    height: 30%;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    align-self: center;
+}
