feat: 예매 화면 구현
1. 페이지 추가 및 퍼블리싱
- Reservation.js, Reservation.css
2. 라우트 추가
- App.js
3. 컴포넌트 수정
- DropDown.js, DropDown.css

--- a/src/css/DropDown.css
+++ b/src/css/DropDown.css
@@ -6,6 +6,7 @@
     border: 2px solid #4F5EE4;
     border-radius: 10px;
     margin: 10px;
+    background: white;
 }
 .dropdown-button {
     width: 100%;
@@ -15,8 +16,8 @@
 .dropdown-button-text {
     width: 55%;
     display: flex;
-    justify-content: center;
     align-items: center;
+    padding-left: 15px;
 }
 .dropdown-button-icon {
     width: 25%;
@@ -32,6 +33,7 @@
     border-radius: 10px;
     padding: 5px;
     background: white;
+    z-index: 1;
 }
 .dropdown-open-menu {
     padding: 5px;
