feat: 예매 화면 구현
1. 예매 완료 화면 퍼블리싱
- Reservation.js, Reservation.css
2. 컴포넌트 수정
- Button.css

--- a/src/css/Button.css
+++ b/src/css/Button.css
@@ -24,4 +24,8 @@
 }
 .button-container-outline:hover {
     cursor: pointer;
+    background: #4F5EE4;
+    color: white;
+    border: 3px solid #4F5EE4;
+    transition: 0.8s;
 }
