feat: 관리하기 > 영화관리 메인 화면 구현
1. 페이지 추가 및 퍼블리싱
- Management.js, Management.css, ManagementMovieList.js
2. 컴포넌트 수정
- Table.js, Table.css, Button.js, DropDown.js, SearchBar.js, SortButton.js
3. 그 외 페이지 추가 수정
- MyPage.js
4. 라우트 추가
- App.js

--- a/src/css/Table.css
+++ b/src/css/Table.css
@@ -2,6 +2,7 @@
     /*border: 2px solid black;*/
 }
 .table-container table {
+    width: 100%;
     border: 2px solid #4F5EE4;
     border-collapse: separate;
     border-spacing: 0;
@@ -12,43 +13,53 @@
     margin-bottom: 10px;
 }
 .table-container table .table-td-col1 {
-    padding-right: 80px;
+    /*padding-right: 80px;*/
+    text-align: start;
     border-bottom: 2px solid #CDD8FF;
 }
 .table-container table .table-td-col2 {
-    padding-right: 40px;
+    /*padding-right: 40px;*/
+    text-align: start;
     border-bottom: 2px solid #CDD8FF;
 }
 .table-container table .table-td-col3 {
-    padding-right: 40px;
+    /*padding-right: 40px;*/
+    text-align: start;
     border-bottom: 2px solid #CDD8FF;
 }
 .table-container table .table-td-col4 {
-    padding-right: 40px;
+    /*padding-right: 40px;*/
+    text-align: start;
     border-bottom: 2px solid #CDD8FF;
 }
 .table-container table .table-td-col5 {
-    padding-right: 40px;
+    /*padding-right: 40px;*/
+    text-align: start;
     border-bottom: 2px solid #CDD8FF;
 }
 .table-container table .table-td-col6 {
-    padding-right: 40px;
+    /*padding-right: 40px;*/
+    text-align: start;
     border-bottom: 2px solid #CDD8FF;
 }
 .table-container table .table-td-col7 {
-    padding-right: 40px;
+    /*padding-right: 40px;*/
+    text-align: start;
     border-bottom: 2px solid #CDD8FF;
 }
 .table-container table .table-td-col8 {
-    padding-right: 40px;
+    /*padding-right: 40px;*/
+    text-align: start;
     border-bottom: 2px solid #CDD8FF;
 }
 .table-container table .table-td-col9 {
-    padding-right: 40px;
+    /*padding-right: 40px;*/
+    text-align: start;
     border-bottom: 2px solid #CDD8FF;
 }
 .table-container table .table-td-col10 {
-    padding-right: 40px;
+    /*padding-right: 40px;*/
+    text-align: start;
     border-bottom: 2px solid #CDD8FF;
 }
 
