feat: 관리하기 > 영화관리 > 상세 화면 구현
1. 페이지 추가 및 퍼블리싱
- ManagementMovieDetail.js
2. 퍼블리싱 수정
- Management.js, Management.css
3. 컴포넌트 수정
- Button.js, Button.css

--- a/src/css/Button.css
+++ b/src/css/Button.css
@@ -29,3 +29,17 @@
     border: 3px solid #4F5EE4;
     transition: 0.8s;
 }
+.button-container-caution {
+    border: 3px solid #E4614F;
+    border-radius: 10px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #F34008;
+    font-weight: bold;
+    background: #FFD9CD;
+}
+.button-container-caution:hover {
+    cursor: pointer;
+}
