--- a/src/css/Management.css
+++ b/src/css/Management.css
@@ -398,3 +398,46 @@
 }
 .management-theater-list-content-box-row-table {
 }
+
+/* management-theater-register */
+.management-theater-register-container {}
+.management-theater-register-title {
+    font-size: 25px;
+    font-weight: bold;
+}
+.management-theater-register-content {
+    border-top: 2px solid #BCBCBC;
+    border-bottom: 2px solid #BCBCBC;
+}
+.management-theater-register-content-box {
+    width: 250px;
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 20px 0;
+}
+.management-theater-register-content-box-top {
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.management-theater-register-content-box-top-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.management-theater-register-content-box-top-row-col-title {}
+.management-theater-register-content-box-top-row input {
+    border-radius: 5px;
+    width: 165px;
+    height: 30px;
+    border: 1px solid #BCBCBC;
+}
+.management-theater-register-content-box-bottom {
+    width: 70%;
+    display: flex;
+    justify-content: space-between;
+    align-self: end;
+}
