feat: 관리하기 > 좌석 관리 > 등록 화면 구현
1. 페이지 추가 및 퍼블리싱
- ManagementSeatRegister.js
2. 퍼블리싱 수정
- Management.js, Management.css
3. 그 외 페이지 수정
- ManagementTheaterRegister.js

--- a/src/css/Management.css
+++ b/src/css/Management.css
@@ -470,3 +470,46 @@
 }
 .management-seat-list-content-box-row-table {
 }
+
+/* management-seat-register */
+.management-seat-register-container {}
+.management-seat-register-title {
+    font-size: 25px;
+    font-weight: bold;
+}
+.management-seat-register-content {
+    border-top: 2px solid #BCBCBC;
+    border-bottom: 2px solid #BCBCBC;
+}
+.management-seat-register-content-box {
+    width: 250px;
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 20px 0;
+}
+.management-seat-register-content-box-top {
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.management-seat-register-content-box-top-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.management-seat-register-content-box-top-row-col-title {}
+.management-seat-register-content-box-top-row input {
+    border-radius: 5px;
+    width: 165px;
+    height: 30px;
+    border: 1px solid #BCBCBC;
+}
+.management-seat-register-content-box-bottom {
+    width: 70%;
+    display: flex;
+    justify-content: space-between;
+    align-self: end;
+}
