modify: 컴포넌트 수정
1. 공통 CSS 추가
- App.css
2. 우측 메뉴 간격 및 폰트 변경
- Navigation.js, Navigation.css

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,14 @@
     transform: rotate(360deg);
   }
 }
+
+/* common */
+@font-face {
+  font-family: 'TTHakgyoansimMulgyeolB';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2402_keris@1.0/TTHakgyoansimMulgyeolB.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+}
+.font-HakMulB {
+  font-family: 'TTHakgyoansimMulgyeolB';
+}
