--- a/src/css/CardList.css
+++ b/src/css/CardList.css
@@ -1,6 +1,6 @@
 .card-list-container {
     display: flex;
-    width: 900px;
+    width: 1000px;
     justify-content: space-between;
 }
 .card-list-button-arrow {
@@ -23,14 +23,14 @@
     justify-content: space-between;
 }
 .card-list-box-column {
-    width: 30%;
+    width: 27%;
     height: 95%;
     display: flex;
     justify-content: space-between;
-    border: 2px solid #8b8b8b;
+    border: 1px solid #8b8b8b;
     border-radius: 10px;
     padding: 5px;
-    box-shadow: black 0px 4px 5px;
+    box-shadow: #a0a0a0 8px 8px 5px 0px;
 }
 .card-list-box-image {
     width: 45%;
@@ -39,7 +39,7 @@
     background-size: cover;
 }
 .card-list-box-detail {
-    width: 50%;
+    width: 60%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -47,7 +47,6 @@
 .card-list-box-detail-top {
     height: 30%;
     display: flex;
-    justify-content: space-between;
 }
 .card-list-box-detail-bottom {
     height: 55%;
@@ -62,9 +61,10 @@
     font-size: 11px;
     border: 3px solid limegreen;
     border-radius: 100%;
+    margin-right: 5px;
 }
 .card-list-box-detail-title {
-    font-size: 11px;
+    font-size: 15px;
     font-weight: bold;
     display: flex;
     justify-content: center;
