modify: CSS 일괄 수정
동일한 height로 일괄 수정

--- a/src/css/MovieList.css
+++ b/src/css/MovieList.css
@@ -1,11 +1,11 @@
 .movie-list-container {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 1024px;
 }
 
 .movie-list-header {
-    height: 35%;
+    height: 25%;
     background-image: url("https://starwalk.space/gallery/images/what-is-space/1920x1080.jpg");
     background-repeat: no-repeat;
     display: flex;
