--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -1,5 +1,5 @@
 .main-container {
-    height: 100vh;
+    height: 1024px;
     background-image: url("https://www.shutterstock.com/ko/blog/wp-content/uploads/sites/17/2020/10/background-ideas-banner.jpg");
     background-repeat: no-repeat;
     background-size: 100% 100%;
