--- a/src/css/SideBar.css
+++ b/src/css/SideBar.css
@@ -2,7 +2,7 @@
     position: fixed;
     right: 0;
     width: 255px;
-    height: 100vh;
+    height: 1024px;
     display: none;
     /*border: 2px solid red;*/
     background: #F3F3F3;
