--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -1,6 +1,6 @@
 .main-container {
     height: 1024px;
-    background-image: url("https://www.shutterstock.com/ko/blog/wp-content/uploads/sites/17/2020/10/background-ideas-banner.jpg");
+    background-image: url("https://file2.nocutnews.co.kr/newsroom/image/2023/05/12/202305121639003107_0.jpg");
     background-repeat: no-repeat;
     background-size: 100% 100%;
 }
