--- a/src/css/Navigation.css
+++ b/src/css/Navigation.css
@@ -52,6 +52,7 @@
     width: 60px;
     height: 60px;
     border-radius: 50%;
-    background-image: url("https://an2-img.amz.wtchn.net/image/v2/zDnGorH9D34otwy-HUhVwA.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk1USTRNSGczTWpCeE9EQWlYU3dpY0NJNklpOTJNaTl6ZEc5eVpTOXBiV0ZuWlM4eE5qRTFPRGMwTlRJeU56UXlNVFl6TURZNUluMC5jcUtHdGtfUGhOWjJrc1I5d2stSWRPcVpwOXF2QXQ0TjF0clgzTFEtVktR");
+    background-image: url("https://cdn.pixabay.com/photo/2014/03/25/16/57/clapper-297673_640.png");
     background-size: 100% 100%;
+    background-color: white;
 }
