--- a/src/css/Management.css
+++ b/src/css/Management.css
@@ -585,3 +585,32 @@
     justify-content: space-between;
     align-self: end;
 }
+
+/* management-genre-list */
+.management-genre-list-container {}
+.management-genre-list-title {
+    font-size: 25px;
+    font-weight: bold;
+}
+.management-genre-list-content {
+    border-top: 2px solid #BCBCBC;
+    border-bottom: 2px solid #BCBCBC;
+}
+.management-genre-list-content-box {
+    width: 800px;
+}
+.management-genre-list-content-box-row-search {
+    display: flex;
+    justify-content: space-between;
+}
+.management-genre-list-content-box-row-search-col-left {
+    display: flex;
+}
+.management-genre-list-content-box-row-search-col-right {
+    width: 17%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.management-genre-list-content-box-row-table {
+}
