--- a/src/css/FindIdPwd.css
+++ b/src/css/FindIdPwd.css
@@ -81,3 +81,71 @@
     align-items: center;
     height: 25%;
 }
+.findidpwd-tab-contents-result-box {
+    width: 70%;
+    height: 65%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    /*border: 1px solid red;*/
+}
+.findidpwd-tab-contents-result-box-row-top {
+    height: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    /*border: 1px solid blue;*/
+}
+.findidpwd-tab-contents-result-box-row-title {
+    text-align: center;
+    font-size: 30px;
+    /*border: 1px solid yellow;*/
+}
+.findidpwd-tab-contents-result-box-row-id {
+    text-align: center;
+    align-content: center;
+    font-size: 20px;
+    height: 50%;
+    border-radius: 10px;
+    background-color: white;
+    color: black;
+    /*border: 1px solid yellow;*/
+}
+.findidpwd-tab-contents-result-box-row-newpwd {
+    display: flex;
+    justify-content: space-between;
+    height: 50%;
+    /*border: 1px solid white;*/
+}
+.findidpwd-tab-contents-result-box-row-newpwd-col-title {
+    align-content: center;
+    /*border: 1px solid yellow;*/
+}
+.findidpwd-tab-contents-result-box-row-newpwd-col-input {
+    align-content: center;
+    width: 65%;
+    /*border: 1px solid yellow;*/
+}
+.findidpwd-tab-contents-result-box-row-newpwd-col-input input {
+    width: 100%;
+    height: 35px;
+    border-radius: 8px;
+    border: none;
+}
+.findidpwd-tab-contents-result-box-row-newpwd-complete {
+    font-size: 30px;
+    text-align: center;
+    align-content: end;
+    height: 100%;
+    /*border: 1px solid red;*/
+}
+.findidpwd-tab-contents-result-box-row-bottom {
+    display: flex;
+    justify-content: space-between;
+    /*border: 1px solid blue;*/
+}
+.findidpwd-tab-contents-result-box-row-bottom-center {
+    display: flex;
+    justify-content: center;
+    /*border: 1px solid blue;*/
+}
