--- a/src/css/Management.css
+++ b/src/css/Management.css
@@ -6,8 +6,9 @@
 
 .management-header {
     height: 25%;
-    background-image: url("https://starwalk.space/gallery/images/what-is-space/1920x1080.jpg");
+    background-image: url("https://media.istockphoto.com/id/90974750/ko/%EB%B2%A1%ED%84%B0/%EC%B2%AD%EC%82%AC%EC%A7%84-%EB%B0%B0%EA%B2%BD-cogs.jpg?s=1024x1024&w=is&k=20&c=IN1xdIoShmdP7pliCTERBXF7P2_iTSvSdtpsTLXmfjA=");
     background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     justify-content: center;
     align-items: end;
