--- a/src/css/MovieDetail.css
+++ b/src/css/MovieDetail.css
@@ -43,6 +43,7 @@
     height: 10%;
     display: flex;
     justify-content: center;
+    border-bottom: 2px solid #8b8b8b;
 }
 .movie-detail-content-box-image {
     width: 45%;
