--- a/src/css/Modal.css
+++ b/src/css/Modal.css
@@ -1,6 +1,8 @@
 .modal-container {
     background: rgba(0, 0, 0, 0.5);
-    position: absolute;
+    position: fixed;
+    left: 0;
+    top: 0;
     width: 100%;
     height: 100%;
     justify-content: center;
