--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,16 @@
 .font-TAEBAEK {
   font-family: 'TAEBAEKmilkyway';
 }
+@font-face {
+  font-family: 'Ownglyph_ryurue-Rg';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2405-2@1.0/Ownglyph_ryurue-Rg.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+.font-Ownglyph_ryurue-Rg {
+  font-family: 'Ownglyph_ryurue-Rg';
+}
+
 input {
   font-family: 'TAEBAEKmilkyway';
 }
